k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elibrary
  labels:
    name: elibrary
